# C-tasks

./: CMakeLists.txt  class_radians_degrees.cpp
hometasks/: bincalc.cpp  class_radians_degrees.cpp  graphics.cpp
lib/: poly.h  vec2d.h
